try to fix missing anime girl:)

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -60,7 +60,7 @@
 
       <div class="home-container1">
         <img
-          src="/static/public/wallpaperflare.com_wallpaper%20(7)-1500w.jpg"
+          src="/static/public/cute-girl.jpg"
           alt="image"
           class="home-image1"
         />
